--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,23 @@
 [package]
 name = "neogrok"
-version = "0.1.1"
+authors = ["nero"]
+description = "Simple NeoGrok(https://github.com/kvxmmu/neogrok) client implementation"
+
+version = "1.2.0"
 edition = "2021"
-authors = ["Nero"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+lto = true
+strip = true
+
 [dependencies]
+tokio = { version = "1.16.1", features = ["full"] }
+
+pretty_env_logger = "0.4.0"
+log = "0.4.14"
+clap = { version = "3.0.14", features = ["derive"] }
+
 client = { path = "client" }
 
-clap = { version = "3.0.0", features = ["derive"] }
-tokio = { version = "1.15.0", features = ["full"] }
