--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.15.0", features = ["full"] }
-neoproto = { path = "../neoproto" }
+zstd-sys = "1.6.3+zstd.1.5.2"
+log = "0.4.14"
 
-zstd-sys = "1.6.2+zstd.1.5.1"
-async-trait = "0.1.52"
+tokio = { version = "1.16.1", features = ["full"] }
+neoproto = { path = "../neoproto" }
+rustc-hash = "1.1.0"
