--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 [profile.release]
 lto = true
 strip = true
+opt-level = 3
 
 [dependencies]
 tokio = { version = "1.16.1", features = ["full"] }
