--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -12,3 +12,5 @@ log = "0.4.14"
 tokio = { version = "1.17.0", features = ["rt", "sync", "net", "io-util", "time", "macros"] }
 neoproto = { path = "../neoproto" }
 rustc-hash = "1.1.0"
+
+once_cell = "1.10.0"
