--- a/idpool/Cargo.toml
+++ b/idpool/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "client"
+name = "idpool"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-neogrok-codec = { path = "../neogrok-codec" }
+tokio = { version = "1.18.2", features = ["sync"] }
