--- a/zstd-wrapper/Cargo.toml
+++ b/zstd-wrapper/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "client"
+name = "zstd-wrapper"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-neogrok-codec = { path = "../neogrok-codec" }
+tokio = { version = "1.18.2", features = ["rt"] }
+zstd-sys = "2.0.1+zstd.1.5.2"
