--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "3.1.18", features = ["derive"] }
-client = { path = "client" }
 tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread"] }
 
 num_cpus = "1.13.1"
+
+client = { path = "client" }
+anyhow = "1.0.57"
+pretty_env_logger = "0.4.0"
