--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
 name = "client"
-version = "0.1.0"
+version = "1.0.0-release"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.57"
 log = "0.4.17"
+
 neogrok-codec = { git = "https://git.nerodono.su/NeoGrok/neogrok-codec.git" }
 pipeline = { git = "https://git.nerodono.su/NeoGrok/pipeline.git" }
+idpool = { git = "https://git.nerodono.su/NeoGrok/idpool.git" }
+
 tokio = { version = "1.18.2", features = ["net", "rt", "sync", "macros"] }
+rustc-hash = "1.1.0"
